# MIAD-RAG-RealEstate

./: .gitignore  LICENSE  README.md  tree.sh
.github/workflows/: backend-ci.yml  frontend-ci.yml  job-ci.yml  terraform.yml
_realstate_ragas/: .gitignore  Dockerfile  EVALUATION_PIPELINE.md  Makefile  README.md  construccion_indice_faiss.md  docker-compose.yml  dockerignore  main.py  pytest.ini  requirements.txt  resumenAPI.md
_realstate_ragas/diagrams/: rag_simple.puml  realstate_rag_architecture_internal.puml
_realstate_ragas/local_tests/: .ejemplo_env  construccion_indice_faiss.md  validate_faiss_load.ipynb
apps/backend/: Dockerfile  main.py  requirements.txt
apps/frontend/: .dockerignore  Dockerfile  README.md  requirements.txt
apps/job-indexer/: Dockerfile  README.md  requirements.txt
data/: README.md  requirements.txt
data/dictionaries/: data_dictionary.md
data/inputs/: Cotización monedas.xlsx  outputMLScrapper250226.csv
data/samples/: real_estate_listings.csv
data/schemas/: rag_eval_results_schema.json  real_estate_listings_schema.json
data/scripts/: generate_anonized.py  generate_sample.py  load_real_estate_listings.sh
shared/python/: pyproject.toml
shared/python/miad_rag_common/: pyproject.toml
shared/python/miad_rag_common/gcp/: bigquery_client.py  gcs_client.py  secret_manager.py
shared/python/miad_rag_common/logging/: structured_logging.py
shared/python/miad_rag_common/schemas/: __init__.py  ask.py  filters.py  listing.py  map.py  recommend.py
shared/python/miad_rag_common/utils/: norm_barrio_utils.py  text_utils.py
(+125 files in other folders)
