[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "miad-rag-common"
version = "0.1.0"
description = "Shared schemas, utilities, logging, and GCP clients for MIAD RAG Real Estate."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.11,<3.0",
    "google-cloud-bigquery>=3.25,<4.0",
    "google-cloud-storage>=2.17,<3.0",
    "google-cloud-secret-manager>=2.20,<3.0",
    "pandas>=2.2,<3.0",
    "numpy>=2.2,<3.0",
    "RapidFuzz>=3.14,<4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["miad_rag_common*"]