[project]
name = "miad-rag-common"
version = "0.1.0"
description = "Shared utilities, schemas and GCP clients for MIAD RAG Real Estate"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["miad_rag_common*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"