[project]
name = "miad-rag-common"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2",
  "pandas>=2",
  "google-cloud-bigquery>=3.25,<4",
  "google-cloud-storage>=2.17,<3",
  "google-cloud-secret-manager>=2.20,<3",
  "RapidFuzz>=3"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["miad_rag_common*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
